tdf#118254 Do not rely on XStatusIndicator for SVG import

For SVGs loaded as Document and status 'hidden' is used,
there is no xStatusIndicator handed over to the SVGFilter.
Compared with old filter - there it was used setting it
somewhere else, but not required. Remove code that it
requires it.

Change-Id: I9fbf2b4ea02d8c5aae234f78f96b4acd37b7341b